; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/agere/extr_et131x.c_et131x_enable_txrx.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/agere/extr_et131x.c_et131x_enable_txrx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.et131x_adapter = type { i32 }

@FMP_ADAPTER_INTERRUPT_IN_USE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @et131x_enable_txrx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @et131x_enable_txrx(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.et131x_adapter*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call %struct.et131x_adapter* @netdev_priv(%struct.net_device* %4)
  store %struct.et131x_adapter* %5, %struct.et131x_adapter** %3, align 8
  %6 = load %struct.et131x_adapter*, %struct.et131x_adapter** %3, align 8
  %7 = call i32 @et131x_rx_dma_enable(%struct.et131x_adapter* %6)
  %8 = load %struct.et131x_adapter*, %struct.et131x_adapter** %3, align 8
  %9 = call i32 @et131x_tx_dma_enable(%struct.et131x_adapter* %8)
  %10 = load %struct.et131x_adapter*, %struct.et131x_adapter** %3, align 8
  %11 = getelementptr inbounds %struct.et131x_adapter, %struct.et131x_adapter* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @FMP_ADAPTER_INTERRUPT_IN_USE, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %1
  %17 = load %struct.et131x_adapter*, %struct.et131x_adapter** %3, align 8
  %18 = call i32 @et131x_enable_interrupts(%struct.et131x_adapter* %17)
  br label %19

19:                                               ; preds = %16, %1
  %20 = load %struct.net_device*, %struct.net_device** %2, align 8
  %21 = call i32 @netif_start_queue(%struct.net_device* %20)
  ret void
}

declare dso_local %struct.et131x_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @et131x_rx_dma_enable(%struct.et131x_adapter*) #1

declare dso_local i32 @et131x_tx_dma_enable(%struct.et131x_adapter*) #1

declare dso_local i32 @et131x_enable_interrupts(%struct.et131x_adapter*) #1

declare dso_local i32 @netif_start_queue(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
